[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Sprout Lands - Sprites - Basic pack/Objects/Basic_Furniture.png" type="Texture" id=1]
[ext_resource path="res://scripts/Furniture.gd" type="Script" id=2]
[ext_resource path="res://assets/Roboto_fonts/static/Roboto-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.47451, 0.741176, 0.603922, 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.176471 )

[node name="Furniture" type="Node2D"]
z_index = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 16, 32, 16, 16 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 0, -32 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 32, 16, 16, 16 )

[node name="PickupTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="PickupDelayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ProgressBar" type="ProgressBar" parent="Control"]
visible = false
margin_left = -10.0
margin_top = -17.0
margin_right = 32.0
margin_bottom = -3.0
rect_min_size = Vector2( 20, 5 )
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/fg = SubResource( 1 )
percent_visible = false

[node name="StatsLabel" type="Label" parent="Control"]
visible = false
margin_left = -38.0
margin_top = -9.0
margin_right = 38.0
margin_bottom = 5.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "-10% prices"
align = 1

[connection signal="timeout" from="PickupTimer" to="." method="_on_PickupTimer_timeout"]
